# FEM-Coursework

./: CMakeLists.txt  finite_element.hpp  finite_element_big_mesh.hpp  main.cpp  main_big_mesh+area.cpp  main_big_mesh_disp.cpp  main_disp(big+area).cpp  mesh.hpp  output.vtk  stiffness_matrix.txt
